--- a/style.css
+++ b/style.css
@@ -13,3 +13,20 @@ h3 {
 h4 {
     cursor: cell;
 }
+
+h5 {
+    font-family: Impact;
+    font-size: 25pt;
+}
+
+h6 {
+    letter-spacing: 8px;
+}
+
+.text-decoration {
+    text-decoration: green wavy underline;
+}
+
+.line-above {
+    text-decoration: overline #ff3028;
+}
